ajout du filemanager pour tinymce + page d'accueil par défaut

--- a/src/CoreBundle/Resources/config/routing.yml
+++ b/src/CoreBundle/Resources/config/routing.yml
@@ -1,6 +1,8 @@
 core_homepage:
     path:     /
-    defaults: { _controller: CoreBundle:Default:index }
+    defaults:
+        _controller: CoreBundle:Default:show
+        slug: accueil
 
 core_adminpage:
     path:     /admin
