--- a/src/CoreBundle/Resources/config/routing.yml
+++ b/src/CoreBundle/Resources/config/routing.yml
@@ -8,9 +8,18 @@ core_adminpage:
     path:     /admin
     defaults: { _controller: CoreBundle:Default:admin }
 
+# requètes ajax
 ajax_snippet_image_send:
     path:     /ajax/snippet/image/send/{id}
     defaults: { _controller: CoreBundle:Galery:ajaxSnippetImageSend }
+
+ajax_select_img:
+    path:     /ajax/select/img/{id}
+    defaults: { _controller: CoreBundle:Galery:ajaxSelectImg }
+
+ajax_add_galery_user:
+    path:     /ajax/add/user/galery/{galery}/{user}
+    defaults: { _controller: CoreBundle:Galery:ajaxAddGaleryUser }
 
 # Gestion du menu
 add_link:
@@ -63,7 +72,17 @@ galery_view:
     path:     /galery/{id}
     defaults: { _controller: CoreBundle:Galery:view }
     requirements:
+        id: \d+
+
+private_galery:
+    path:     /private/{id}
+    defaults: { _controller: CoreBundle:Galery:privateGalery }
+    requirements:
             id: \d+
+
+shootings:
+    path:     /shootings
+    defaults: { _controller: CoreBundle:Galery:shootings }
 
 add_galery:
     path:     /admin/addgalery
